--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 quarkus.package.type=uber-jar
+
+quarkus.log.level=DEBUG
+quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console=true
+
+quarkus.rest-client.logging.scope=request-response
+quarkus.rest-client.logging.body-limit=200
+quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
