--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-quarkus.package.type=uber-jar
+quarkus.http.limits.max-form-attribute-size=32768
+
+quarkus.rest-client.pipeline-service.url=http://el-slack-message.svc:8080
 
 quarkus.log.level=INFO
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
