--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.http.limits.max-form-attribute-size=32768
 
-quarkus.rest-client.pipeline-service.url=http://el-slack-message.svc:8080
+quarkus.rest-client.pipeline-service.url=http://el-slack-message:8080
 
 quarkus.log.level=INFO
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
