Fix various issues, add logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 quarkus.http.limits.max-form-attribute-size=32768
 
 quarkus.rest-client.pipeline-service.url=http://el-slack-message:8080
+# quarkus.rest-client.pipeline-service.url=https://el-slack-message-product-catalog-cicd.apps.home.ocplab.com
 
 quarkus.log.level=INFO
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console=true
+
+quarkus.rest-client.logging.scope=request-response
+quarkus.rest-client.logging.body-limit=1000
+
+quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
