--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.http.limits.max-form-attribute-size=32768
 
-quarkus.rest-client.pipeline-service.url=http://el-slack-message:8080
+quarkus.rest-client.pipeline-service.url=http://13.68.196.1:30025
 # quarkus.rest-client.pipeline-service.url=https://el-slack-message-product-catalog-cicd.apps.home.ocplab.com
 
 quarkus.log.level=INFO
